@startuml
'https://plantuml.com/sequence-diagram



class Materia{
 -nombre : String
 -codigo : Integer
 -materiasCorrelativas : List<Materia>

 +agregarCorrelativas(materia : Materia) : Boolean
}

class Alumno{
-nombre : String
-legajo : Integer
-materiasAprobadas : List<Materia>

 +puedeInscribirse(materia : Materia) : Boolean
 +agregarMateriaAprobada(materia : Materia) : Void

}

class Inscripcion{
+aprobada(unAlumno:Alumno, unaMateria:Materia) : Boolean
}

Alumno --> "*" Materia: materias
Inscripcion --> Alumno: alumno
Inscripcion --> Materia: materia
@enduml